[gd_scene load_steps=12 format=2]

[ext_resource path="res://titleScreenNEW.gd" type="Script" id=1]
[ext_resource path="res://title_screen.png" type="Texture" id=2]
[ext_resource path="res://Menu Select.wav" type="AudioStream" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://bobbingIcons.tscn" type="PackedScene" id=5]
[ext_resource path="res://langauageControls.tscn" type="PackedScene" id=6]
[ext_resource path="res://mago3.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://mainMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://difficultyMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://levelMenu.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=3]
size = 29
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="titleScreen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer"]
visible = false
margin_left = 76.0
margin_top = 12.0
margin_right = 76.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 4 )

[node name="bobbingIcons" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 88.0
margin_right = 216.0

[node name="mainMenu" parent="." instance=ExtResource( 8 )]
visible = false
margin_top = 2.24799
margin_bottom = 2.24799

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 113.0
margin_right = 288.0
margin_bottom = 217.0
input_pass_on_modal_close_click = false
custom_colors/default_color = Color( 0.6, 0.329412, 0.635294, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave amp=20.0 freq=1.5 connected=1]Disability: 
Incapable of ever letting anything slip from her grasp[/wave]"
text = "Disability: 
Incapable of ever letting anything slip from her grasp"

[node name="difficultyMenu" parent="." instance=ExtResource( 9 )]
visible = false
margin_top = -87.752
margin_bottom = -87.752

[node name="levelMenu" parent="." instance=ExtResource( 10 )]
visible = false
margin_left = 10.0
margin_top = 35.0
margin_right = 442.0
margin_bottom = 235.0

[node name="langauageControls" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, -337 )

[connection signal="finished" from="start" to="." method="_on_start_finished"]
[connection signal="item_selected" from="mainMenu" to="." method="_on_mainMenu_item_selected"]
[connection signal="item_selected" from="difficultyMenu" to="." method="_on_difficultyMenu_item_selected"]
[connection signal="item_selected" from="levelMenu" to="." method="_on_levelMenu_item_selected"]
